--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 #spring.mvc.view.prefix = /webapp/
 #spring.mvc.view.sufix= .jsp
-spring.jpa.hibernate.ddl-auto=update
+
+# DB
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/testdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+
+# ORM
 spring.jpa.show-sql: true
+spring.jpa.hibernate.ddl-auto=update
+
+# sessions
 spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=600
+spring.h2.console.enabled=true
