[Modified] Auth based on type given in props

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,5 @@ spring.session.jdbc.initialize-schema=always
 spring.session.timeout.seconds=600
 spring.h2.console.enabled=true
 
-app.authentication.type=sessions
+# customized props
+app.authentication.type=jwt
