[Modify] Logout feature done for both by using config only

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.session.timeout.seconds=600
 spring.h2.console.enabled=true
 
 # customized props
-app.authentication.type=jwt
+app.authentication.type=sessions
