[Added] ErrorController for different HTTPStatusCodes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.h2.console.enabled=true
 
 # customized props
 app.authentication.type=sessions
+
+# server error handling
+server.error.whitelabel.enabled=false
+server.error.path=/error
