--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.h2.console.enabled=true
 app.authentication.type=sessions
 
 # server error handling
-server.error.whitelabel.enabled=false
-server.error.path=/error
+# server.error.whitelabel.enabled=false
+# server.error.path=/error
